--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ $dark-grey: #252525;
 .js, .fontawesome-i2svg-active, .fontawesome-i2svg-complete {
     margin-top: 0 !important;
 }
+html {display: flex; flex-direction: column;} /* IE fix */
 body {
     color: $white;
     display: flex;
@@ -26,6 +27,13 @@ body {
     background: -webkit-linear-gradient(45deg, #519af0 0%,#f679e7 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(45deg, #519af0 0%,#f679e7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#519af0', endColorstr='#f679e7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.wrapper {
+    flex: 1 1 auto; /* occupe la hauteur restante */
+    display: flex; /* crée un contexte flex pour ses enfants */
+    flex-direction: column; /* affichage vertical */
+    height: 100%;
+    justify-content: space-between;
 }
 a, a:hover, a:visited, a:focus, a:active {
     color: $primary;
