--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,9 @@ input[type="submit"] {
   color: #6AC8EE !important;
   border: 1px solid #6AC8EE; }
 
+#open-register:hover {
+  cursor: pointer; }
+
 /******************************************************************************/
 /************************************** Error Page ****************************/
 /******************************************************************************/
