couleur texte tableaux

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,9 @@ input[type="submit"] {
     color: #fff;
     font-weight: 600; }
 
+table tr td {
+  color: #252525 !important; }
+
 /******************************************************************************/
 /******************************* LOGIN FORM ***********************************/
 /******************************************************************************/
