--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,6 +88,13 @@ input[type="submit"] {
         }
     }
 }
+table {
+    tr {
+        td {
+            color: #252525 !important;
+        }
+    }
+}
 
 
 /******************************************************************************/
