--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 /******************************************************************************/
 /************************************* VARIABLES ******************************/
 /******************************************************************************/
@@ -23,10 +22,10 @@ body {
     align-content: space-between !important;
     font-family: 'Muli', sans-serif;
     background: #519af0; /* Old browsers */
-    background: -moz-linear-gradient(45deg, #519af0 0%, #f679e7 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, #519af0 0%,#f679e7 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, #519af0 0%,#f679e7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#519af0', endColorstr='#f679e7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: -moz-linear-gradient(45deg, #519af0 0%, $pink 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #519af0 0%,$pink 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #519af0 0%,$pink 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#519af0', endColorstr='$pink',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 .wrapper {
     flex: 1 1 auto; /* occupe la hauteur restante */
@@ -56,28 +55,27 @@ input[type="submit"] {
 }
 .menu-login {
     list-style: none;
+    padding: 20px;
     .btn-login {
         background-color: transparent !important;
         position: absolute;
         right: 20px;
         text-transform: uppercase;
+        padding: 5px 20px;
     }
+}
+.top-bar {
+    padding: 20px 40px;
 }
 
 /******************************************************************************/
 /****************************************** HOME ******************************/
 /******************************************************************************/
-#home {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 50vh;
-    #title {
-        text-transform: uppercase;
-        text-align: center;
-        color: $white;
-        font-size: 4em;
-    }
+h1 {
+    text-transform: uppercase;
+    text-align: center;
+    color: $white;
+    font-size: 6em;
 }
 .top-bar, .top-bar ul {
     background-color: transparent;
@@ -95,7 +93,6 @@ table {
         }
     }
 }
-
 
 /******************************************************************************/
 /******************************* LOGIN FORM ***********************************/
@@ -155,66 +152,58 @@ table {
     cursor: pointer;
 }
 
-/******************************************************************************/
-/************************************** Error Page ****************************/
-/******************************************************************************/
-
-/* Not Found */
-.not-found {
-    text-align: center;
-    .page-title {
-        font-size: 12em;
-        font-weight: 700;
-        color: $primary;
-        margin-bottom: 0;
-    }
-    h5 {
-        font-size: 2.4em;
-        letter-spacing: 2px;
-        font-weight: 600;
-    }
-    span, p {
-        font-size: 1.4em;
-        padding-bottom: 40px;
-    }
-    .back-to-home {
-        float: none;
-        width: 12%;
-        margin: auto;
+#login-form, #register-user {
+    .form-icons {
+      text-align: center;
+  
+        h4 {
+            margin-bottom: 1rem;
+        }
+    
+        .input-group-label {
+            background-color: $primary;
+            border-color: $primary;
+            height: 40px;
+        }
+    
+        .input-group-field {
+            border-color: $primary;
+        }
+    
+        .fa {
+            color: white;
+            width: 1rem; // makes the width of icon labels equal
+        }
     }
 }
-
-/******************************************************************************/
-/************************************** FOOTER ********************************/
-/******************************************************************************/
-
+  
 
 /******************************************************************************/
 /************************************** RESPONSIVE ****************************/
 /******************************************************************************/
 
-@media only screen and (max-width: 1199px) {
-
-}
-@media only screen and (max-width: 1024px) {
-
-}
-@media only screen and (max-width: 991px) {
-
-
-}
-@media only screen and (max-width: 768px) {
-
-}
 @media only screen and (max-width: 767px) {
-
-
+    h1 {
+        font-size: 4em;
+    }
+    .top-bar {
+        padding: 5px;
+        h5 {
+            display: none;
+        }
+        ul {
+            padding: 4px;
+            display: flex;
+            justify-content: space-between;
+            li {
+                font-size: 0.9em;
+            }
+        }
+    }
 }
 @media only screen and (max-width: 600px) {
-
-
+    h1 {
+        font-size: 2.4em;
+    }
 }
-@media only screen and (max-width: 460px) {
 
-
-}
