--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,9 +2,11 @@
 /************************************* VARIABLES ******************************/
 /******************************************************************************/
 $primary: #6AC8EE;
+$secondary: #519af0;
 $pink: #f679e7;
 $white: #fff;
 $dark-grey: #252525;
+$clear: rgba($white, 0.2);
 
 /******************************************************************************/
 /*************************************** RESET ********************************/
@@ -37,10 +39,7 @@ body {
 a, a:hover, a:visited, a:focus, a:active {
     color: $primary;
 }
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+.submit {
     color: $white !important;
     font-weight: 600 !important;
     padding: 10px;
@@ -50,18 +49,21 @@ input[type="submit"] {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1;
-    padding: .6em 1em .4em;
+    padding: .6em .4em;
     border: 0;
 }
 .menu-login {
     list-style: none;
     padding: 20px;
-    .btn-login {
+    .clear {
         background-color: transparent !important;
         position: absolute;
         right: 20px;
+        top: 20px;
         text-transform: uppercase;
         padding: 5px 20px;
+        color: $white !important;
+        border: 0 !important;
     }
 }
 .top-bar {
@@ -69,7 +71,7 @@ input[type="submit"] {
 }
 
 /******************************************************************************/
-/****************************************** HOME ******************************/
+/*************************************** CONTENT ******************************/
 /******************************************************************************/
 h1 {
     text-transform: uppercase;
@@ -90,6 +92,64 @@ table {
     tr {
         td {
             color: #252525 !important;
+        }
+    }
+}
+#center-container, #form_maint {
+    background-color: $clear;
+    margin: 40px;
+    padding: 40px 10px;
+    border-radius: 8px;
+    border: 1px solid rgba($white, 0.35);
+    form, #update-form {
+        width: 100%;
+        .grid-x {
+            display: flex;
+            justify-content: space-between;
+            .cell {
+                padding: 0;
+            }
+        }
+        label {
+            color: $white !important;
+        }
+        input[type="text"] {
+            border-radius: 8px;
+            // border: 1px solid $white;
+            border: 0;
+        }
+        input[type="radio"] {
+            position: relative;
+            top: -2px;
+            margin-right: 10px !important;
+        }
+        .data_rech {
+            display: inline-block;
+            width: 48%;
+            padding: 0;
+            label {
+                margin-bottom: 10px;
+            }
+        }
+        .button, input[type="submit"] {
+            color: $white !important;
+            font-weight: 700 !important;
+            text-transform: uppercase;
+            background-color: transparent !important;
+            margin: 5px 0;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid $white;
+            width: 100%;
+            height: 40px;
+        }
+    }
+    #update-form {
+        input[type="submit"] {
+            width: 48%;
+            // margin-left: 2.5%;
+            background-color: transparent !important;
+            padding: 0;
         }
     }
 }
