--- a/css/style.css
+++ b/css/style.css
@@ -91,49 +91,58 @@ h1 {
 table tr td {
   color: #252525 !important; }
 
-#center-container, #form_maint {
+.wrapper > .grid-x {
   background-color: rgba(255, 255, 255, 0.2);
   margin: 40px;
   padding: 40px 10px;
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.35); }
-  #center-container form, #center-container #update-form, #form_maint form, #form_maint #update-form {
-    width: 100%; }
-    #center-container form .grid-x, #center-container #update-form .grid-x, #form_maint form .grid-x, #form_maint #update-form .grid-x {
-      display: flex;
-      justify-content: space-between; }
-      #center-container form .grid-x .cell, #center-container #update-form .grid-x .cell, #form_maint form .grid-x .cell, #form_maint #update-form .grid-x .cell {
-        padding: 0; }
-    #center-container form label, #center-container #update-form label, #form_maint form label, #form_maint #update-form label {
-      color: #fff !important; }
-    #center-container form input[type="text"], #center-container #update-form input[type="text"], #form_maint form input[type="text"], #form_maint #update-form input[type="text"] {
-      border-radius: 8px;
-      border: 0; }
-    #center-container form input[type="radio"], #center-container #update-form input[type="radio"], #form_maint form input[type="radio"], #form_maint #update-form input[type="radio"] {
-      position: relative;
-      top: -2px;
-      margin-right: 10px !important; }
-    #center-container form .data_rech, #center-container #update-form .data_rech, #form_maint form .data_rech, #form_maint #update-form .data_rech {
-      display: inline-block;
-      width: 48%;
-      padding: 0; }
-      #center-container form .data_rech label, #center-container #update-form .data_rech label, #form_maint form .data_rech label, #form_maint #update-form .data_rech label {
-        margin-bottom: 10px; }
-    #center-container form .button, #center-container form input[type="submit"], #center-container #update-form .button, #center-container #update-form input[type="submit"], #form_maint form .button, #form_maint form input[type="submit"], #form_maint #update-form .button, #form_maint #update-form input[type="submit"] {
-      color: #fff !important;
-      font-weight: 700 !important;
-      text-transform: uppercase;
-      background-color: transparent !important;
-      margin: 5px 0;
-      padding: 5px;
-      border-radius: 5px;
-      border: 1px solid #fff;
-      width: 100%;
-      height: 40px; }
-  #center-container #update-form input[type="submit"], #form_maint #update-form input[type="submit"] {
-    width: 48%;
-    background-color: transparent !important;
+  .wrapper > .grid-x #visu-form .grid-x .cell, .wrapper > .grid-x #update-form .grid-x .cell {
     padding: 0; }
+  .wrapper > .grid-x #visu-form label, .wrapper > .grid-x #update-form label {
+    color: #fff !important; }
+  .wrapper > .grid-x #visu-form .middle, .wrapper > .grid-x #update-form .middle {
+    margin-bottom: 0 !important; }
+  .wrapper > .grid-x #visu-form input[type="text"], .wrapper > .grid-x #update-form input[type="text"] {
+    border-radius: 8px;
+    border: 0; }
+  .wrapper > .grid-x #visu-form input[type="radio"], .wrapper > .grid-x #update-form input[type="radio"] {
+    position: relative;
+    top: -2px;
+    margin-right: 10px !important; }
+  .wrapper > .grid-x #visu-form .data_rech, .wrapper > .grid-x #update-form .data_rech {
+    display: inline-block;
+    width: 48%;
+    padding: 0; }
+    .wrapper > .grid-x #visu-form .data_rech label, .wrapper > .grid-x #update-form .data_rech label {
+      margin-bottom: 0; }
+  .wrapper > .grid-x #visu-form .button, .wrapper > .grid-x #visu-form input[type="submit"], .wrapper > .grid-x #update-form .button, .wrapper > .grid-x #update-form input[type="submit"] {
+    color: #fff !important;
+    font-weight: 700 !important;
+    text-transform: uppercase;
+    background-color: transparent !important;
+    margin: 5px 0;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #fff;
+    width: 100%;
+    height: 40px; }
+  .wrapper > .grid-x #update-form #intro {
+    width: 100%; }
+  .wrapper > .grid-x #update-form #name-research label {
+    margin-bottom: 5px; }
+  .wrapper > .grid-x #update-form #name-research #data_rech {
+    display: inline-block;
+    width: 48%; }
+  .wrapper > .grid-x #update-form #name-research input[type="submit"] {
+    width: 100%;
+    margin-left: 2.5%;
+    background-color: transparent !important;
+    padding: 0;
+    display: inline-block;
+    width: 48%; }
+  .wrapper > .grid-x #table-container {
+    overflow: scroll; }
 
 /******************************************************************************/
 /******************************* LOGIN FORM ***********************************/
@@ -200,10 +209,33 @@ table tr td {
     color: white;
     width: 1rem; }
 
+.editlink {
+  background-color: #519af0;
+  color: #fff;
+  width: 100%;
+  display: block;
+  text-align: center;
+  border-radius: 4px; }
+
+.editlink:hover {
+  color: #fff;
+  background-color: rgba(81, 154, 240, 0.8); }
+
 /******************************************************************************/
 /************************************** RESPONSIVE ****************************/
 /******************************************************************************/
+@media only screen and (max-width: 1080px) {
+  .medium-8 {
+    width: 100% !important; } }
 @media only screen and (max-width: 767px) {
+  .cell, input[type="text"] {
+    width: 100% !important;
+    margin: 0 !important; }
+
+  input[type="submit"]:not(#logout) {
+    margin: 20px 0 !important;
+    width: 100% !important; }
+
   h1 {
     font-size: 4em; }
 
@@ -218,7 +250,43 @@ table tr td {
       .top-bar ul li {
         font-size: 0.9em; } }
 @media only screen and (max-width: 600px) {
+  .modal-register, .modal-login {
+    width: 100%;
+    height: 100%; }
+    .modal-register .block-revealer__content, .modal-login .block-revealer__content {
+      height: 100%; }
+
+  #close-register, #close-login {
+    position: absolute;
+    top: 10px;
+    right: 10px; }
+
+  .fa-times {
+    color: #6AC8EE; }
+
+  .logout, .btn-login {
+    position: absolute;
+    top: 10px !important;
+    right: 8px !important; }
+
+  .menu-login {
+    padding: 10px !important; }
+
   h1 {
-    font-size: 2.4em; } }
+    font-size: 2.4em; }
+
+  .input-group-field {
+    margin: 0 !important; }
+
+  .wrapper > .grid-x {
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    margin: 0 !important; }
+    .wrapper > .grid-x .cell {
+      margin: 2px !important; }
+    .wrapper > .grid-x .text-center {
+      text-align: left !important;
+      padding-bottom: 0 !important; } }
 
 /*# sourceMappingURL=style.css.map */
