--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#519af0', endColorstr='$pink',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */ }
 
+.background, .background2 {
+  position: absolute;
+  bottom: 0;
+  z-index: 100; }
+
 .wrapper {
   flex: 1 1 auto;
   /* occupe la hauteur restante */
@@ -39,7 +44,9 @@ body {
   flex-direction: column;
   /* affichage vertical */
   height: 100%;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: relative;
+  z-index: 500; }
 
 a, a:hover, a:visited, a:focus, a:active {
   color: #6AC8EE; }
@@ -49,7 +56,6 @@ a, a:hover, a:visited, a:focus, a:active {
   font-weight: 600 !important;
   padding: 10px;
   margin: 0;
-  background-color: #6AC8EE;
   font-size: 12px;
   font-size: 1rem;
   font-weight: 400;
@@ -118,9 +124,9 @@ table tr td {
       margin-bottom: 0; }
   .wrapper > .grid-x #visu-form .button, .wrapper > .grid-x #visu-form input[type="submit"], .wrapper > .grid-x #update-form .button, .wrapper > .grid-x #update-form input[type="submit"] {
     color: #fff !important;
-    font-weight: 700 !important;
+    font-weight: 700;
     text-transform: uppercase;
-    background-color: transparent !important;
+    background-color: transparent;
     margin: 5px 0;
     padding: 5px;
     border-radius: 5px;
@@ -209,17 +215,26 @@ table tr td {
     color: white;
     width: 1rem; }
 
-.editlink {
-  background-color: #519af0;
+#close-register, #close-login {
+  display: none; }
+
+.top-bar li .fas, .top-bar li .far {
+  display: none; }
+
+table tbody tr td:last-child input {
+  background-color: #519af0 !important;
+  text-transform: lowercase !important;
   color: #fff;
   width: 100%;
   display: block;
   text-align: center;
   border-radius: 4px; }
-
-.editlink:hover {
+table tbody tr td:last-child input[type="submit"]:hover {
   color: #fff;
-  background-color: rgba(81, 154, 240, 0.8); }
+  background-color: rgba(81, 154, 240, 0.8) !important; }
+
+.submit {
+  background-color: #6AC8EE !important; }
 
 /******************************************************************************/
 /************************************** RESPONSIVE ****************************/
@@ -250,6 +265,11 @@ table tr td {
       .top-bar ul li {
         font-size: 0.9em; } }
 @media only screen and (max-width: 600px) {
+  .top-bar li {
+    text-align: center; }
+    .top-bar li .fas, .top-bar li .far {
+      display: block; }
+
   .modal-register, .modal-login {
     width: 100%;
     height: 100%; }
@@ -257,6 +277,7 @@ table tr td {
       height: 100%; }
 
   #close-register, #close-login {
+    display: block;
     position: absolute;
     top: 10px;
     right: 10px; }
