--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,12 @@ body {
     background: -webkit-linear-gradient(45deg, #519af0 0%,$pink 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(45deg, #519af0 0%,$pink 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#519af0', endColorstr='$pink',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    // background-image: url('ressources/forme2.png');
+}
+.background, .background2 {
+    position: absolute;
+    bottom: 0;
+    z-index: 100;
 }
 .wrapper {
     flex: 1 1 auto; /* occupe la hauteur restante */
@@ -35,6 +41,8 @@ body {
     flex-direction: column; /* affichage vertical */
     height: 100%;
     justify-content: space-between;
+    position: relative;
+    z-index: 500;
 }
 a, a:hover, a:visited, a:focus, a:active {
     color: $primary;
@@ -44,7 +52,7 @@ a, a:hover, a:visited, a:focus, a:active {
     font-weight: 600 !important;
     padding: 10px;
     margin: 0;
-    background-color: $primary;
+    // background-color: $primary;
     font-size: 12px;
     font-size: 1rem;
     font-weight: 400;
@@ -135,9 +143,9 @@ table {
         }
         .button, input[type="submit"] {
             color: $white !important;
-            font-weight: 700 !important;
+            font-weight: 700;
             text-transform: uppercase;
-            background-color: transparent !important;
+            background-color: transparent;
             margin: 5px 0;
             padding: 5px;
             border-radius: 5px;
@@ -172,7 +180,6 @@ table {
         overflow: scroll;
     }
 }
-
 /******************************************************************************/
 /******************************* LOGIN FORM ***********************************/
 /******************************************************************************/
@@ -234,7 +241,6 @@ table {
 #login-form, #register-user {
     .form-icons {
       text-align: center;
-  
         h4 {
             margin-bottom: 1rem;
         }
@@ -255,20 +261,40 @@ table {
         }
     }
 }
-.editlink {
-    background-color: $secondary;
-    color: $white;
-    width: 100%;
-    display: block;
-    text-align: center;
-    border-radius: 4px;
+#close-register, #close-login {
+    display: none;
 }
-.editlink:hover {
-    color: $white;
-    background-color: rgba($secondary, 0.8);
+.top-bar {
+    li {
+        .fas, .far {
+            display: none;
+        }
+    }
 }
-  
-
+table {
+    tbody {
+        tr {
+            td:last-child {
+                input {
+                    background-color: $secondary !important;
+                    text-transform: lowercase !important;
+                    color: $white;
+                    width: 100%;
+                    display: block;
+                    text-align: center;
+                    border-radius: 4px;
+                }
+                input[type="submit"]:hover {
+                    color: $white;
+                    background-color: rgba($secondary, 0.8) !important;
+                }
+            }
+        }
+    }
+}
+.submit {
+    background-color: $primary !important;
+}
 /******************************************************************************/
 /************************************** RESPONSIVE ****************************/
 /******************************************************************************/
@@ -305,6 +331,14 @@ table {
     }
 }
 @media only screen and (max-width: 600px) {
+    .top-bar {
+        li {
+            text-align: center;
+            .fas, .far {
+                display: block;
+            }
+        }
+    }
     .modal-register, .modal-login {
         width: 100%;
         height: 100%;
@@ -313,6 +347,7 @@ table {
         }
     }
     #close-register, #close-login {
+        display: block;
         position: absolute;
         top: 10px;
         right: 10px;
